<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 docs/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0">
	<modelVersion>4.0.0</modelVersion>
	<groupId>LotroMaestro</groupId>
	<artifactId>LotroMaestro</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<!--
		 Ideally Maven expects src/main and src/test
		 In IDEA, mark srcTest/test as test root, so it will stop complaining
		 -->
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>srcTest/test</testSourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
					<exclude>assembly/**</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
				    <source>21</source>
				    <target>21</target>
				    <compilerArgs>
				        <arg>--add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED</arg>
				        <arg>--add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED</arg>
    	  			</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
					</includes>
                    <useFile>false</useFile>
                    <trimStackTrace>false</trimStackTrace>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.7.1</version>
				<configuration>
				</configuration>
				<executions>
					<execution>
						<id>ToolJar</id>
						<goals>
							<goal>single</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<descriptors>
								<descriptor>src/assembly/jar-tools.xml</descriptor>
							</descriptors>
							<archive>
								<index>true</index>
								<manifest>
									<addClasspath>true</addClasspath>
									<mainClass>com.aifel.abctools.AbcTools</mainClass>
								</manifest>
							</archive>
							<finalName>AbcTools</finalName>
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
					</execution>
					<execution>
						<id>AbcPlayerJar</id>
						<goals>
							<goal>single</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<descriptors>
								<descriptor>src/assembly/jar-player.xml</descriptor>
							</descriptors>
							<archive>
								<index>true</index>
								<manifest>
									<addClasspath>true</addClasspath>
									<mainClass>com.digero.abcplayer.AbcPlayer</mainClass>
								</manifest>
							</archive>
							<finalName>AbcPlayer</finalName>
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
					</execution>
					<execution>
						<id>MaestroJar</id>
						<goals>
							<goal>single</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<descriptors>
								<descriptor>src/assembly/jar-maestro.xml</descriptor>
							</descriptors>
							<archive>
								<index>true</index>
								<manifest>
									<addClasspath>true</addClasspath>
									<mainClass>com.digero.maestro.MaestroMain</mainClass>
								</manifest>
							</archive>
							<finalName>Maestro</finalName>
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- dont need a project artifact beside the 3 jars -->
			<!--plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>default-jar</id>
						<phase>none</phase>
					</execution>
				</executions>
			</plugin-->
		</plugins>
	</build>
	<!--<repositories>
		<repository>
			<id>beatunes</id>
			<name>beaTunes Repository</name>
			<url>https://www.beatunes.com/repo/maven2</url>
		</repository>
	</repositories>-->
	<dependencies>
		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
		<!-- commons-codec and jakarta.xml.bind-api used by com.digero.tools: -->
		<!--dependency>
		    <groupId>commons-codec</groupId>
		    <artifactId>commons-codec</artifactId>
		    <version>1.17.0</version>
		</dependency-->
		<!--dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>3.0.0</version>
		</dependency-->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId> <!-- used by com.digero.tools -->
			<version>3.6.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-csv</artifactId>
		    <version>1.14.1</version>
		</dependency>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>3.6</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/info.clearthought/table-layout/4.3.0 -->
		<dependency>
			<groupId>info.clearthought</groupId>
			<artifactId>table-layout</artifactId>
			<version>4.3.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-api</artifactId>
		    <version>5.13.4</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.13.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
        	<groupId>org.junit.jupiter</groupId>
        	<artifactId>junit-jupiter-params</artifactId>
        	<version>5.13.4</version>
        	<scope>test</scope>
    	</dependency>
		<dependency>
		    <groupId>com.miglayout</groupId>
		    <artifactId>miglayout</artifactId>
		    <version>3.7.4</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/de.sciss/jump3r -->
		<dependency>
		    <groupId>de.sciss</groupId>
		    <artifactId>jump3r</artifactId><!-- used for LAME audio generation -->
		    <version>1.0.5</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/jakarta.activation/jakarta.activation-api -->
		<dependency>
		    <groupId>jakarta.activation</groupId>
		    <artifactId>jakarta.activation-api</artifactId><!-- used for MIME drop of desktop files into app -->
		    <version>2.1.4</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.ibm.icu/icu4j -->
		<dependency>
	   		<groupId>com.ibm.icu</groupId>
	   		<artifactId>icu4j</artifactId><!-- used for charset decoding -->
	   		<version>77.1</version>
	 	</dependency>
		<!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
		<!--
		 This enables annotations like:

		 @NotNull
		 @Nullable
		 @Contract

		 Its about 17 KB
		-->
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>26.0.2</version>
		</dependency>
	</dependencies>
</project>